--- a/meu-rh-360/src/app/components/initial/edit/edit.component.html
+++ b/meu-rh-360/src/app/components/initial/edit/edit.component.html
@@ -123,8 +123,8 @@
             </div>
             <hr>
             <div class="d-flex flex-row-reverse bd-highlight">
-                <button type="button" class="btn btn-primary col-2">Salvar</button>	
-                <button type="button" class="btn btn-secondary col-2 me-2">Cancelar</button>  
+                <button type="submit" class="btn btn-primary col-2">Salvar</button>	
+                <button type="button" (click)="cancelar()" class="btn btn-secondary col-2 me-2">Cancelar</button>  
             </div>
         </form>
     </div>
